dataset1235/2025-2/1955397009/users/1535213836/executions/1686127217_3221148872.log
== SUBMISSION (2025-08-12 13:35:40)
-- CODE: 
print(30+45)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 13:34:01)
-- CODE: 
prin(40+35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(40+35)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(40+35)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 13:33:02)
-- CODE: 
prin(40+35)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(40+35)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prin(40+35)
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
